packages/beff-core/tests/snapshots/frontend_v2__tests__type_export_from_other_file.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"a.ts\",\nr#\"\n                    export type abc = \"abc\";\n                \"#,),\n(\"b.ts\",\nr#\"\n                    export { abc } from \"./a\";\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { abc } from \"./b\";\n                    type X = abc;\n                    parse.buildParsers<{ X: X }>();\n                \"#)])"
---
type BuiltParsers = {
  X: "abc",
}
