packages/beff-core/tests/snapshots/frontend_v2__tests__type_ref.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: print_types(from)
---
type UserId = string;


type BuiltParsers = {
  UserId: UserId,
}
