packages/beff-core/tests/snapshots/frontend_v2__tests__type_ref_multifile.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"entry.ts\",\nr#\"\n                    type UserId = string;\n                    parse.buildParsers<{ UserId: UserId }>();\n                \"#)])"
---
type BuiltParsers = {
  UserId: string,
}
