packages/beff-core/tests/snapshots/frontend_v2__tests__type_ref_multifile_same_name_visibility_collision.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t1.ts\",\nr#\"\n                    type X = string;\n                    export type Z = X[];\n                    type Y = number;\n                    export { Y as X };\n                \"#,),\n(\"t2.ts\",\nr#\"\n                    type X = boolean;\n                    export type Z = X[];\n                    type Y = null;\n                    export { Y as X };\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { X, Z } from \"./t1\";\n                    import { X as X2, Z as Z2 } from \"./t2\";\n                    parse.buildParsers<{ X: X, Z: Z, X2: X2, Z2: Z2 }>();\n                \"#)])"
---
type t1_ts__X = string;

type t1_ts__Y = number;

type t1_ts__Z = Array<t1_ts__X>;

type t2_ts__X = boolean;

type t2_ts__Y = null;

type t2_ts__Z = Array<t2_ts__X>;


type BuiltParsers = {
  X: t1_ts__Y,
  X2: t2_ts__Y,
  Z: t1_ts__Z,
  Z2: t2_ts__Z,
}
