packages/beff-core/tests/snapshots/frontend_v2__tests__type_ref_obj.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t.ts\",\nr#\"\n                    export type X = {a:string};\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { X } from \"./t\";\n                    type Y = {b:number};\n                    parse.buildParsers<{ X: X, Y: Y }>();\n                \"#)])"
---
--- t.ts ---
export type X = {a:string};
--- entry.ts ---
import { X } from "./t";
type Y = {b:number};
parse.buildParsers<{ X: X, Y: Y }>();
--------------------------------
type Y = { "b": number };

type X = { "a": string };


type BuiltParsers = {
  X: X,
  Y: Y,
}
