packages/beff-core/tests/snapshots/frontend_v2__tests__type_ref_reuse.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: "print_types_multifile(&[(\"t1.ts\",\nr#\"\n                    export type X1 = string;\n                    export type Z = {a:X1}\n                \"#,),\n(\"entry.ts\",\nr#\"\n                    import { X1, Z } from \"./t1\";\n                    parse.buildParsers<{ X1: X1, Z: Z }>();\n                \"#)])"
---
type X1 = string;

type Z = { "a": X1 };


type BuiltParsers = {
  X1: X1,
  Z: Z,
}
