packages/beff-core/tests/snapshots/frontend_v2__tests__typeof_declare_local.snap
---
source: packages/beff-core/tests/frontend_v2.rs
expression: print_types(from)
---
--- entry.ts ---
declare const abc: "abc";
type X = typeof abc;
parse.buildParsers<{ X: X }>();
--------------------------------
type X = "abc";


type BuiltParsers = {
  X: X,
}
